# learn-opengl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: app.h  render.h  shader.h
src/: app.cpp  main.cpp  render.cpp  shader.cpp
src/shaders/: vertex_shader.glsl
